[package]
name = "ks-lxi"
version = "0.1.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "LXI protocol implementation with extensions specific for Keysight devices"
homepage = "https://github.com/nthend/ks-lxi-rs"
repository = "https://github.com/nthend/ks-lxi-rs.git"
readme = "README.md"
keywords = ["lxi", "scpi", "lan", "instrumentation"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
lxi = "0.1.3"
